Fixed Header & Subhead align issues

--- a/src/styles/HeaderReact.css
+++ b/src/styles/HeaderReact.css
@@ -38,7 +38,7 @@ text-align: center;
   color: #fff !important;
 }
 .btn-group {
-  margin: 0.5em;
+  margin: 0em 1em;
   padding: 0em;
   justify-content: space-around;
   
@@ -121,7 +121,7 @@ bottom: 34.48%; */
 
 .group-66 {
  justify-content: space-around;
-  width: 90%;
+  width: 100%;
   /* margin: 0em 4em; */
   text-align: center !important;
 
