--- a/src/styles/searchBar.css
+++ b/src/styles/searchBar.css
@@ -8,8 +8,8 @@ element.style {
 .search-bar {
   
   height: 4em;
-  left: 1.5em;
-  right: 3.5em;
+  left: 1em;
+  /* right: 3.5em; */
   text-align: center;
   margin: 0em;
   padding: 0em;
@@ -19,9 +19,7 @@ element.style {
 
 /* Auto Layout */
 .news-filters-dp {
-  margin: 0px;
-    padding: 0;
-    border: none;
+ 
   margin: 0em;
   padding: 0em;
   text-decoration: none;
@@ -45,15 +43,11 @@ element.style {
 
 .news-filters-btn {
   margin-top: 0em;
-  margin: 0px;
-    padding: 0;
-    border: none;
+ 
 }
 
 #news-filters {
-  margin: 0px;
-    padding: 0;
-    border: none;
+
   width: 18%;
   height: 2.6em;
   margin-top: -0.2em;
@@ -148,15 +142,16 @@ margin: 0px;
 
 /* HOT TOPICS */
 .hot-topics {
-  position: flex;
-  padding: 0em 2em 0em 5em;
+  /* position: flex; */
+  /* padding: 0em 2em 0em 5em; */
   font-family: Montserrat;
   color: #2c1c59;
+  /* justify-content: space-around; */
 }
 
 /* SearchBar Text */
 .search-bar-text {
-  position: relative;
+  position: block;
   font-family: Montserrat;
   font-style: normal;
   font-weight: 600;
@@ -175,13 +170,17 @@ margin: 0px;
 /* Search */
 
 .search {
-  right: 3em;
-  top: 0.4em;
-  height: 2.8em;
+ 
+  justify-content: space-around;
+  right: 35%;
+  top: -0.75em;
+  height: 2.6em;
   border-radius: 0.25rem;
-  width: 80%;
-  padding: 0em 0em 0em 1.5em;
+  width: 100%;
+  padding:  1em;
+  
   background-color: #ffffff;
+  
 
   /* Search input */
   font-family: Montserrat;
@@ -200,13 +199,13 @@ margin: 0px;
 .search-i {
   position: relative;
   z-index: 1;
-  top: -0.2em;
-  left: -5em;
+  top: 1.25em;
+  /* left: -118em; */
 
-  color: #000000;;
+  color: #000000;
 
   cursor: pointer;
-  width: 0;
+  /* width: 0; */
   /* True Black */
 
   /* background: #000000; */
